crates/harnx/tests/snapshots/tmux_e2e__interactive_handoff_planner_to_executor.snap
---
source: crates/harnx/tests/tmux_e2e.rs
expression: normalized
---
What feature would you like me to plan?

> Add a dark mode toggle

Plan created: 1) Add theme toggle component 2) Add CSS variables 3) Wire up state persistence. Ready to hand off to
plan-executor. Proceed?

> yes

Great! Handing off to plan-executor.

→ plan-executor_session_handoff
prompt: 'Execute the plan: add dark mode toggle with keyboard shortcut.'
session_id: exec-session-1
Handing off to plan-executor…
> plan-executor ▸ exec-session-1
Executing step 1: creating theme toggle component.

→ create_file
path: src/components/ThemeToggle.tsx
content: // Theme toggle component
Plan execution complete. Theme toggle is ready.

> Actually, can you also add a shortcut key?

Adding keyboard shortcut for theme toggle.

→ edit_file
path: src/components/ThemeToggle.tsx
edit: Add keyboard shortcut Ctrl+Shift+T
Done! Theme toggle now has keyboard shortcut Ctrl+Shift+T.

• 🤖 plan-executor ▸ exec-session-1   Context: 189(1%)
