crates/harnx/tests/snapshots/tmux_e2e__mutation_snap5_session2_loaded.snap
---
source: crates/harnx/tests/tmux_e2e.rs
expression: s
---
Welcome to harnx [VERSION]  *  Type .help for commands, Tab to complete.
> first message

FIRST_RESPONSE_SENTINEL

> fifth message

EDITED_RESPONSE_SENTINEL

🤖 mutation-test-agent ▸ mutation-e2e-session



























* 🤖 mutation-test-agent ▸ mutation-e2e-session   Context: 42(0%)


# snap: 5-session2-loaded
