crates/harnx/tests/snapshots/tmux_e2e__nested_sub_agent_activity_no_duplicates.snap
---
source: crates/harnx/tests/tmux_e2e.rs
assertion_line: 1332
expression: normalized
---
Welcome to harnx [VERSION]  *  Type .help for commands, Tab to complete.
nested-parent v
🤖 nested-parent ▸ temp
> do nested delegation

Parent delegating to researcher.

@ nested-researcher
Research this deeply and delegate analysis.
> nested-researcher ▸ [SID]
Researcher delegating to analyst.

@ nested-analyst
Analyze data and report back.
> nested-analyst ▸ [SID]
Analyst complete

> nested-researcher ▸ [SID]
session_id: [SID]
response: Analyst complete
Researcher complete

session_id: [SID]
response: Researcher delegating to analyst.
Nested task complete

📢 Autonaming the session.
> nested-parent ▸ temp
No more scripted responses.


















































* 🤖 nested-parent ▸ temp   Context: [N](0%)
