crates/harnx/tests/snapshots/tmux_e2e__retry_all_fail_shows_warnings_in_tui.snap
---
source: crates/harnx/tests/tmux_e2e.rs
expression: normalized
---
Welcome to harnx [VERSION]  *  Type .help for commands, Tab to complete.
retry-agent
🤖 retry-agent ▸ mock-llm:primary ▸ [SID]
> hello

⚠ Retryable error (status 500, Internal Server Error (type: server_error)), attempt 1/3. Retrying in 10ms...
⚠ Retryable error (status 500, Internal Server Error (type: server_error)), attempt 2/3. Retrying in 20ms...
⚠ Model 'mock-llm:primary' exhausted retries (error: Failed to call chat-completions api (client: mock-llm, model:
mock-llm:primary): Internal Server Error (type: server_error) (status: 500)), cooldown 60s. Trying next fallback.
⚠ Retryable error (status 500, Internal Server Error (type: server_error)), attempt 1/3. Retrying in 10ms...
⚠ Retryable error (status 500, Internal Server Error (type: server_error)), attempt 2/3. Retrying in 20ms...
⚠ Model 'mock-llm:fallback' exhausted retries (error: Failed to call chat-completions api (client: mock-llm, model:
mock-llm:fallback): Internal Server Error (type: server_error) (status: 500)), cooldown 60s. Trying next fallback.
error: Failed to call chat-completions api (client: mock-llm, model: mock-llm:fallback)

Caused by:
    Internal Server Error (type: server_error) (status: 500)






























* 🤖 retry-agent ▸ mock-llm:primary ▸ [SID]
