crates/harnx/tests/snapshots/tmux_e2e__retry_succeed_after_retry_shows_warning_then_response.snap
---
source: crates/harnx/tests/tmux_e2e.rs
assertion_line: 1754
expression: normalized
---
Welcome to harnx [VERSION]  *  Type .help for commands, Tab to complete.
retry-agent v
🤖 retry-agent ▸ temp
> hello

⚠ Retryable error (status 500, Temporary failure (type: server_error)), attempt 1/3. Retrying in 10ms...
RETRY_SUCCESS_RESPONSE: Hello from the retried model!

📢 Autonaming the session.
> retry-agent ▸ temp
Should not reach here.




































* 🤖 retry-agent ▸ temp   Context: 27(0%)
